--- a/railway-app-frontend/package.json
+++ b/railway-app-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^2.1.0",
     "@angular/animations": "^16.0.0",
     "@angular/cdk": "^16.2.5",
     "@angular/common": "^16.0.0",
