--- a/railway-app-frontend/package.json
+++ b/railway-app-frontend/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@abacritt/angularx-social-login": "^2.1.0",
-    "@angular/animations": "^16.0.0",
+    "@angular/animations": "^16.2.6",
     "@angular/cdk": "^16.2.5",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
