--- a/railway-app-frontend/package.json
+++ b/railway-app-frontend/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@asymmetrik/ngx-leaflet": "^16.0.1",
     "date-fns": "^2.30.0",
+    "leaflet": "^1.9.4",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -38,6 +40,7 @@
     "@angular/cli": "~16.0.1",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.9.6",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "eslint": "^8.49.0",
