Adding backend logic for paypal payment creation & processing

--- a/railway-app-backend/src/main/resources/application.properties
+++ b/railway-app-backend/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=railway-app-mongodb
 #spring.data.mongodb.uri=mongodb://localhost:27017/railway-app-mongodb
+
+paypal.mode=sandbox
+paypal.client.id=Addup2cdAEtK6Cvo0BrsuGXFDFEKdNhZZvo-BFN1hWlUGZVwdrZd56Pk2vOXxGfgAMGQXQpl3uLg03Nj
+paypal.client.secret=EAU1oYgu5YIMbJyr5UYqu1rxpeAmvlKj6FGP7ZpCMJeqHK9evF-x9HL9Anwm6UBRIy45BX0tBSuaKplm
+paypal.currency=USD
+paypal.token.price=1
