--- a/railway-app-backend/pom.xml
+++ b/railway-app-backend/pom.xml
@@ -142,6 +142,13 @@
 			<version>0.0.1-RC7</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.paypal.sdk</groupId>
+			<artifactId>rest-api-sdk</artifactId>
+			<version>1.14.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
