--- a/railway-app-backend/pom.xml
+++ b/railway-app-backend/pom.xml
@@ -148,6 +148,11 @@
 			<version>1.14.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
