--- a/railway-app-backend/src/main/resources/application.properties
+++ b/railway-app-backend/src/main/resources/application.properties
@@ -24,3 +24,7 @@ paypal.client.id=Addup2cdAEtK6Cvo0BrsuGXFDFEKdNhZZvo-BFN1hWlUGZVwdrZd56Pk2vOXxGf
 paypal.client.secret=EAU1oYgu5YIMbJyr5UYqu1rxpeAmvlKj6FGP7ZpCMJeqHK9evF-x9HL9Anwm6UBRIy45BX0tBSuaKplm
 paypal.currency=USD
 paypal.token.price=1
+
+#Kafka
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=railway-system
