--- a/railway-app-backend/pom.xml
+++ b/railway-app-backend/pom.xml
@@ -153,6 +153,12 @@
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-websocket</artifactId>
+			<version>6.0.12</version>
+		</dependency>
+
 
 	</dependencies>
 
