--- a/railway-app-frontend/package.json
+++ b/railway-app-frontend/package.json
@@ -23,10 +23,13 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@asymmetrik/ngx-leaflet": "^16.0.1",
+    "@stomp/stompjs": "^7.0.0",
     "date-fns": "^2.30.0",
     "leaflet": "^1.9.4",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -41,6 +44,8 @@
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.6",
+    "@types/sockjs-client": "^1.5.2",
+    "@types/stompjs": "^2.3.6",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "eslint": "^8.49.0",
